manifests/dev/backend-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-blue
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-blue
  template:
    metadata:
      labels:
        app: backend-blue
    spec:
      containers:
        - name: backend
          image: us-central1-docker.pkg.dev/useful-variety-470306-n5/gke-repo/gke-3tier-backend:latest
          ports:
            - containerPort: 5000
