manifests/dev/frontend-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-green
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-green
  template:
    metadata:
      labels:
        app: frontend-green
    spec:
      containers:
        - name: frontend
          image: us-central1-docker.pkg.dev/useful-variety-470306-n5/gke-repo/gke-3tier-frontend:latest
          ports:
            - containerPort: 80
