manifests/dev/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: dev
spec:
  selector:
    app: backend-blue
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
