manifests/dev/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: dev
spec:
  selector:
    app: frontend-blue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
