manifests/dev/svc-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: dev
spec:
  type: ClusterIP  # keep ClusterIP if backend is only internal
  selector:
    app: backend-green
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
