manifests/dev/svc-frontend.yaml
# manifests/dev/svc-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: dev
spec:
  type: LoadBalancer
  selector:
    app: frontend-blue   # initially pointing to blue
  ports:
    - port: 80
      targetPort: 80
